--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@userflux/browser-js-react",
-	"version": "1.0.13",
+	"version": "1.0.14",
 	"description": "UserFlux's React SDK - send your frontend analytics data to the UserFlux platform",
 	"main": "dist/index.js",
 	"module": "dist/index.esm.js",
@@ -41,6 +41,7 @@
 		"@babel/cli": "^7.24.7",
 		"@babel/core": "^7.24.7",
 		"@babel/preset-env": "^7.24.7",
-		"@babel/preset-react": "^7.24.7"
+		"@babel/preset-react": "^7.24.7",
+		"@babel/plugin-transform-private-property-in-object": "^7.24.7"
 	}
 }
